# LLM_Ops_Project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_langfuse.py
scripts/: pipeline_runner.py  register_model_with_custom_handler.py  validate_gcp_setup.py
src/: __init__.py  constants.py  handler.py  monitoring.py
src/app/: main.py
src/pipeline_components/: __init__.py  data_transformation_component.py  evaluation_component.py  fine_tuning_component.py  inference_component.py
src/pipelines/: __init__.py  model_training_pipeline.py
